# rapid350_sdl

./: .env.example  .gitignore  .justfile  .pre-commit-config.yaml  README.md  badlab_sdl.lab.yaml  compose.yaml  pyproject.toml  rapid350_sdl.lab.yaml  rapid_350.lab.yaml  rapid_350_lab.manager.yaml
.madsci_backup/liconic/: liconic_resources.yaml
.madsci_backup/workcells/RAPID 350 Baker Enclosure Workcell/Workflows/01K0ADQ2F1K3ZXWQWADQEM4VC3/Inputs/: solo_temp1.hso
.madsci_backup/workcells/RAPID 350 Baker Enclosure Workcell/Workflows/01K1C0KW6D8HWCY3SJFZX8BZEF/Inputs/: solo_temp1.hso
.madsci_backup/workcells/RAPID 350 Baker Enclosure Workcell/Workflows/01K1GQTBZE0S3XECFY8FBZE04N/Inputs/: solo_temp1.hso
docker/: infra.compose.yaml  managers.compose.yaml  nodes.compose.yaml
frigate/: rapid350_frigate.compose.yaml
frigate/config/: config.yml
managers/: bad.workcell.yaml  bad_lab_data.manager.yaml  bad_lab_events.manager.yaml  bad_lab_experiments.manager.yaml  bad_lab_resources.manager.yaml  locations.yaml  rapid_350_data.manager.yaml  rapid_350_enclosure.workcell.yaml  rapid_350_events.manager.yaml  rapid_350_experiments.manager.yaml  rapid_350_lab.manager.yaml  rapid_350_location.manager.yaml  rapid_350_resources.manager.yaml
nodes/: liconic_lisa.info.yaml  liconic_lisa.node.yaml  peeler_potato.info.yaml  peeler_potato.node.info.yaml  peeler_potato.node.yaml  platecrane_node.info.yaml  platecrane_poly.node.yaml  sealer_harp.info.yaml  sealer_harp.node.info.yaml  sealer_harp.node.yaml
(+24 files in other folders)
