[project]
name = "rapid350_sdl"
version = "0.1.0"
description = "The RAPID 350 Self-Driving Laboratory @ Argonne National Laboratory"
authors = [
    {name = "Casey Stone", email = "cstone@anl.gov"},
]
dependencies = ["pre-commit>=4.2.0", "ruff>=0.11.9", "madsci.client~=0.6.0", "madsci.common~=0.6.0"]
requires-python = ">=3.9.1"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
